2020-01-15  Gleb Semenov  <gleb.semenov@gmail.com>

	* The LICENSE file added, the ChangeLog file added

Copyright © 2020 Gleb Semenov
Unfinished work, not yet for distribution.